katars/tests/snaps/snapshots/snap_errors__break_outside_loop.snap
---
source: katars/tests/snaps/errors.rs
expression: "helpers::run_error(\"break\")"
---
Error: break outside of loop
   ╭─[<test>:1:1]
   │
 1 │ break
   │ ──┬──  
   │   ╰──── break outside of loop
───╯
